# voice-ai-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: index.html  predictions.json
docs/: architecture.md  decisions.md  scalability.md
scripts/: verify_whisper.py
src/: config.py
src/agent/: loop.py  reasoner.py
src/api/: main.py  schemas.py
src/eval/: runner.py
src/stt/: whisper_wrapper.py
src/tts/: synth.py
tests/: conftest.py  test_eval_runner.py  test_health.py  test_reasoner_slots.py  test_tts_stub.py  test_voice_loop_e2e.py
